--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
                         <option value="ru">Russian</option>
                         <option value="de">German</option>
                         <option value="pl">Polish</option>
+                        <option value="sw">Swahili</option>
                     </select>
                 </div>
                 <div>
